<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="long_text">Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World!</string>
    <string name="user_name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_send_notification">发送通知</string>
    <string name="btn_cancel_notification">取消通知</string>
    <string name="btn_alert_dialog">显示 dialog</string>
    <string name="btn_popup_window">显示 popup window</string>
    <string name="title_activity_mvvm_demo">MvvmDemoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>