<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"

        app:titleTextColor="@color/white"
        app:titleMarginStart="0dp"

        app:subtitleTextColor="@color/white"
        app:logo="@mipmap/ic_launcher"
        app:navigationIcon="@drawable/ic_baseline_add_circle_24">
        <TextView
            android:text="title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="marquee"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:shadowColor="@color/red"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="3"
                android:singleLine="true"
                android:text="@string/long_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/btn_color_selector"
                android:onClick="onBtnClick"
                android:text="淦"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginRight="20dp"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="20dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/red"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_a" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"

                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/red"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="login"
                android:text="@string/btn_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/test"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_Login" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                />

            <ProgressBar
                android:id="@+id/process"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="50"

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loading" />

            <ProgressBar
                android:id="@+id/h_loading"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:indeterminate="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/process"
                />


            <Button
                android:onClick="sendNotification"
                android:text="@string/btn_send_notification"
                android:id="@+id/btn_send_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/h_loading" />

            <Button
                android:onClick="cancelNotification"
                android:text="@string/btn_cancel_notification"
                android:id="@+id/btn_cancel_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"

                app:layout_constraintLeft_toRightOf="@+id/btn_send_noti"
                app:layout_constraintTop_toBottomOf="@id/h_loading" />

            <Button
                android:onClick="showDialog"
                android:text="@string/btn_alert_dialog"
                android:id="@+id/btn_alert_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/btn_send_noti"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:onClick="showPopupWindow"
                android:text="@string/btn_popup_window"
                android:id="@+id/btn_popup_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="200dp"
                app:layout_constraintTop_toBottomOf="@id/btn_alert_dialog"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
